tests/NormalTests/paczka1/fuzzy1/63948590.err
Error in line 1: A313 A392 82,6
Error in line 3: A313 A615 -1,6
Error in line 9: xCEx A392 24,5
Error in line 4: unruAzw S200 93,6
Error in line 30: A313 A313 88,7
Error in line 31: A313 A615 42,2
Error in line 35: xCEx S200 71,05
